[tool.poetry]
name = "database-to-ymarkdown"
version = "0.1.0"
description = ""
authors = ["György Kiss <gyorgy@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
