[tool.poetry]
name = "mdtools"
version = "0.1.0"
description = ""
authors = ["György Kiss <gyorgy@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyyaml = "^6.0.1"
sh = "^2.0.6"

[tool.poetry.scripts]
mdtools = 'mdtools.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
